--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,3 +67,17 @@
     @apply bg-background text-foreground;
   }
 }
+body {
+  background-color: var(--background);
+  color: var(--text);
+}
+
+[data-theme="dark"] {
+  --background: #333 !important ;
+  --text: #ffffff !important;
+}
+
+[data-theme="light"] {
+  --background: #fff !important;
+  --text: #000 !important;
+}
