working on dashboard . fixed dashoard error also create public message page complete 60%

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,7 +67,7 @@
     @apply bg-background text-foreground;
   }
 }
-body {
+/* body {
   background-color: var(--background);
   color: var(--text);
 }
@@ -80,4 +80,4 @@ body {
 [data-theme="light"] {
   --background: #fff !important;
   --text: #000 !important;
-}
+} */
